--- a/app/html/header.html
+++ b/app/html/header.html
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div class="header__middle">
-            <div class="header__middle__logo"><img src="img/logo.png" alt=""></div>
+            <div class="header__middle__logo"><a href="index.html"><img src="img/logo.png" alt=""></a></div>
             <div class="header__middle__search">
                 <form>
                     <input type="text" placeholder="Поиск по товарам">
@@ -66,6 +66,15 @@
                                 <img src="img/icons/gyro-item.png" alt="">
                                 <a href="#">Моноколеса</a>
                                 <img class="arrow-menu" src="img/icons/arrow-menu.png" alt="">
+                                <ul>
+                                    <li><a href="internal.html">Моноколесо Airwheel</a></li>
+                                    <li><a href="#">Моноколесо EcoDrift</a></li>
+                                    <li><a href="#">Моноколесо EcoDrifter</a></li>
+                                    <li><a href="#">Моноколесо Ruswheel</a></li>
+                                    <li><a href="#">Моноколесо Smart Balance</a></li>
+                                    <li><a href="#">Моноколесо Solowheel</a></li>
+                                    <li><a href="#">Моноколесо Solowheel</a></li>
+                                </ul>
                             </li>
                             <li>
                                 <img src="img/icons/gyro-item.png" alt="">
