--- a/contacts.html
+++ b/contacts.html
@@ -43,7 +43,7 @@
             </div>
         </div>
         <div class="header__middle">
-            <div class="header__middle__logo"><img src="img/logo.png" alt=""></div>
+            <div class="header__middle__logo"><a href="index.html"><img src="img/logo.png" alt=""></a></div>
             <div class="header__middle__search">
                 <form>
                     <input type="text" placeholder="Поиск по товарам">
@@ -51,8 +51,10 @@
                 </form>
             </div>
             <div class="header__middle__callback">
-                <p>+7 757 287 78 78</p>
-                <p>+8 835 698 78 85</p>
+                <div class="phone-number">
+                    <p>+7 757 287 78 78</p>
+                    <p>+8 835 698 78 85</p>
+                </div>
                 <a class="btn-orange" href="#">обратный звонок</a>
             </div>
         </div>
@@ -64,11 +66,74 @@
                             <span></span><span></span>
                         </a>
                         <ul class="sub-menu">
-                            <li><a href="#">Category-1</a></li>
-                            <li><a href="#">Category-2</a></li>
-                            <li><a href="#">Category-3</a></li>
-                            <li><a href="#">Category-4</a></li>
-                            <li><a href="#">Category-5</a></li>
+                            <li>
+                                <img src="img/icons/gyro-item.png" alt="">
+                                <a href="#">Гироскутеры</a>
+                                <img class="arrow-menu" src="img/icons/arrow-menu.png" alt="">
+                                <ul>
+                                    <li><a href="#">Гироскутеры Airwheel</a></li>
+                                    <li><a href="#">Гироскутеры EcoDrift</a></li>
+                                    <li><a href="#">Гироскутеры EcoDrifter</a></li>
+                                    <li><a href="#">Гироскутеры Ruswheel</a></li>
+                                    <li><a href="#">Гироскутеры Smart Balance</a></li>
+                                    <li><a href="#">Гироскутеры Solowheel</a></li>
+                                    <li><a href="#">Гироскутеры Solowheel</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <img src="img/icons/gyro-item.png" alt="">
+                                <a href="#">Моноколеса</a>
+                                <img class="arrow-menu" src="img/icons/arrow-menu.png" alt="">
+                                <ul>
+                                    <li><a href="internal.html">Моноколесо Airwheel</a></li>
+                                    <li><a href="#">Моноколесо EcoDrift</a></li>
+                                    <li><a href="#">Моноколесо EcoDrifter</a></li>
+                                    <li><a href="#">Моноколесо Ruswheel</a></li>
+                                    <li><a href="#">Моноколесо Smart Balance</a></li>
+                                    <li><a href="#">Моноколесо Solowheel</a></li>
+                                    <li><a href="#">Моноколесо Solowheel</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <img src="img/icons/gyro-item.png" alt="">
+                                <a href="#">Сигвей</a>
+                                <img class="arrow-menu" src="img/icons/arrow-menu.png" alt="">
+                            </li>
+                            <li>
+                                <img src="img/icons/gyro-item.png" alt="">
+                                <a href="#">Электросамокаты</a>
+                                <img class="arrow-menu" src="img/icons/arrow-menu.png" alt=""></li>
+                            <li>
+                                <img src="img/icons/gyro-item.png" alt="">
+                                <a href="#">Электровелосипеды</a>
+                                <img class="arrow-menu" src="img/icons/arrow-menu.png" alt="">
+                            </li>
+                            <li>
+                                <img src="img/icons/gyro-item.png" alt="">
+                                <a href="#">Электроскейтборды</a>
+                                <img class="arrow-menu" src="img/icons/arrow-menu.png" alt="">
+                            </li>
+                            <li>
+                                <img src="img/icons/gyro-item.png" alt="">
+                                <a href="#">Электроскутеры</a>
+                                <img class="arrow-menu" src="img/icons/arrow-menu.png" alt="">
+                            </li>
+                            <li>
+                                <img src="img/icons/gyro-item.png" alt="">
+                                <a href="#">Электромотоциклы</a>
+                                <img class="arrow-menu" src="img/icons/arrow-menu.png" alt="">
+                            </li>
+                            <li>
+                                <img src="img/icons/gyro-item.png" alt="">
+                                <a href="#">Электроквадроциклы</a>
+                                <img class="arrow-menu" src="img/icons/arrow-menu.png" alt="">
+                            </li>
+                            <li>
+                                <img src="img/icons/gyro-item.png" alt="">
+                                <a href="#">Запчасти</a>
+                                <img class="arrow-menu" src="img/icons/arrow-menu.png" alt="">
+                            </li>
+
                         </ul>
                     </li>
                     <li class="drop">
@@ -107,6 +172,87 @@
                             <li><a href="#">Category-5</a></li>
                         </ul>
                     </li>
+                </ul>
+            </div>
+            <div class="header__bottom__nav-mobile">
+                <div class="menu-line">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+                <a class="menu-btn" href="#">МЕНЮ</a>
+                <ul class="menu-mob">
+                    <li class="menu-mob__list">
+                        <img class="gyro" src="img/icons/gyro-item.png" alt="">
+                        <a href="#">Гироскутеры</a>
+                        <img class="arrow-menu" src="img/icons/arrow-menu.png" alt="">
+                        <ul class="menu-mob__list-submenu">
+                            <li><a href="#">Гироскутеры Airwheel</a></li>
+                            <li><a href="#">Гироскутеры EcoDrift</a></li>
+                            <li><a href="#">Гироскутеры EcoDrifter</a></li>
+                            <li><a href="#">Гироскутеры Ruswheel</a></li>
+                            <li><a href="#">Гироскутеры Smart Balance</a></li>
+                            <li><a href="#">Гироскутеры Solowheel</a></li>
+                            <li><a href="#">Гироскутеры Solowheel</a></li>
+                        </ul>
+                    </li>
+                    <li class="menu-mob__list">
+                        <img class="gyro" src="img/icons/gyro-item.png" alt="">
+                        <a href="#">Моноколеса</a>
+                        <img class="arrow-menu" src="img/icons/arrow-menu.png" alt="">
+                        <ul class="menu-mob__list-submenu">
+                            <li><a href="#">Гироскутеры Airwheel</a></li>
+                            <li><a href="#">Гироскутеры EcoDrift</a></li>
+                            <li><a href="#">Гироскутеры EcoDrifter</a></li>
+                            <li><a href="#">Гироскутеры Ruswheel</a></li>
+                            <li><a href="#">Гироскутеры Smart Balance</a></li>
+                            <li><a href="#">Гироскутеры Solowheel</a></li>
+                            <li><a href="#">Гироскутеры Solowheel</a></li>
+                        </ul>
+                    </li>
+                    <li class="menu-mob__list">
+                        <img class="gyro" src="img/icons/gyro-item.png" alt="">
+                        <a href="#">Сигвей</a>
+                        <img class="arrow-menu" src="img/icons/arrow-menu.png" alt="">
+                    </li>
+                    <li class="menu-mob__list">
+                        <img class="gyro" src="img/icons/gyro-item.png" alt="">
+                        <a href="#">Электросамокаты</a>
+                        <img class="arrow-menu" src="img/icons/arrow-menu.png" alt=""></li>
+                    <li class="menu-mob__list">
+                        <img class="gyro" src="img/icons/gyro-item.png" alt="">
+                        <a href="#">Электровелосипеды</a>
+                        <img class="arrow-menu" src="img/icons/arrow-menu.png" alt="">
+                    </li>
+                    <li class="menu-mob__list">
+                        <img class="gyro" src="img/icons/gyro-item.png" alt="">
+                        <a href="#">Электроскейтборды</a>
+                        <img class="arrow-menu" src="img/icons/arrow-menu.png" alt="">
+                    </li>
+                    <li class="menu-mob__list">
+                        <img class="gyro" src="img/icons/gyro-item.png" alt="">
+                        <a href="#">Электроскутеры</a>
+                        <img class="arrow-menu" src="img/icons/arrow-menu.png" alt="">
+                    </li>
+                    <li class="menu-mob__list">
+                        <img class="gyro" src="img/icons/gyro-item.png" alt="">
+                        <a href="#">Электромотоциклы</a>
+                        <img class="arrow-menu" src="img/icons/arrow-menu.png" alt="">
+                    </li>
+                    <li class="menu-mob__list">
+                        <img class="gyro" src="img/icons/gyro-item.png" alt="">
+                        <a href="#">Электроквадроциклы</a>
+                        <img class="arrow-menu" src="img/icons/arrow-menu.png" alt="">
+                    </li>
+                    <li class="menu-mob__list">
+                        <img class="gyro" src="img/icons/gyro-item.png" alt="">
+                        <a href="#">Запчасти</a>
+                        <img class="arrow-menu" src="img/icons/arrow-menu.png" alt="">
+                    </li>
+                    <li><a href="#">ОСТАВКА И ОПЛАТА</a></li>
+                    <li><a href="#">РЕМОНТ</a></li>
+                    <li><a href="#">ОТЗЫВЫ</a></li>
+                    <li><a href="#">КОНТАКТЫ</a></li>
                 </ul>
             </div>
         </div>
@@ -167,18 +313,22 @@
     <div class="container">
         <div class="footer__top">
             <div class="footer__top__logo">
-                <img src="img/logo.png" alt="">
+                <img src="img/logo-footer.png" alt="">
             </div>
             <div class="footer__top__payment">
                 <p>способы оплаты:</p>
-                <img src="img/icons/sberbank.png" alt="">
-                <img src="img/icons/visa.png" alt="">
-                <img src="img/icons/wm.png" alt="">
-                <img src="img/icons/yandex-money.png" alt="">
+                <div>
+                    <img src="img/icons/sberbank.png" alt="">
+                    <img src="img/icons/visa.png" alt="">
+                    <img src="img/icons/wm.png" alt="">
+                    <img src="img/icons/yandex-money.png" alt="">
+                </div>
             </div>
             <div class="footer__top__contacts">
-                <p>+7 757 287 78 78</p>
-                <p>+8 835 698 78 85</p>
+                <div>
+                    <p>+7 757 287 78 78</p>
+                    <p>+8 835 698 78 85</p>
+                </div>
                 <a class="btn-orange" href="#">обратный звонок</a>
             </div>
         </div>
@@ -201,7 +351,7 @@
                     <li><a href="#">Электроскутеры</a></li>
                 </ul>
             </div>
-            <div class="block">
+            <div class="block for-mobile">
                 <ul>
                     <li><a href="#">Электромотоциклы</a></li>
                     <li><a href="#">Инвалидные каляски на электротяге</a></li>
@@ -210,7 +360,7 @@
                     <li><a href="#">Электроквадрациклы</a></li>
                 </ul>
             </div>
-            <div class="block">
+            <div class="block for-middle">
                 <ul>
                     <li><a href="#">Электроскейты</a></li>
                     <li><a href="#">Электрокары</a></li>
@@ -220,7 +370,7 @@
                     <li><a href="#">Производители</a></li>
                 </ul>
             </div>
-            <div class="block">
+            <div class="block for-middle">
                 <ul>
                     <li><a href="#">Запчасти</a></li>
                     <li><a href="#">Аксесуары</a></li>
@@ -232,8 +382,15 @@
                 </ul>
             </div>
         </div>
+        <p class="footer-paragraph"><a href="#">Dadoo.ru</a> &copy; 2017</p>
     </div>
 </footer>
+
+<div class="modal">
+    <div class="basket"><img src="img/icons/basket.png" alt=""><span></span></div>
+    <p>В вашей корзине 1 товар <span>на сумму 9800 руб.</span></p>
+    <a href="#" class="btn-orange">оформить заказ</a>
+</div>
 <!-- end footer.html-->
 
 <!-- start html_close.html-->
