add responsive for internal

--- a/app/html/internal.html
+++ b/app/html/internal.html
@@ -1,111 +1,39 @@
 <div class="internal">
     <div class="container">
-        <div class="internal__description">
-            <ul class="internal__description__menu">
-                <li><a><img src="img/internal/menu-icon1.png" alt="">Производитель</a></li>
-                <li><a href="#"><img src="img/internal/menu-icon2.png" alt="">AirWheel</a></li>
-                <li><a href="#"><img src="img/internal/menu-icon3.png" alt="">Ecodrift</a></li>
-                <li><a href="#"><img src="img/internal/menu-icon4.png" alt="">GotWay</a></li>
-                <li><a href="#"><img src="img/internal/menu-icon5.png" alt="">Inmotion</a></li>
-                <li><a href="#"><img src="img/internal/menu-icon6.png" alt="">IPS</a></li>
-                <li><a href="#"><img src="img/internal/menu-icon7.png" alt="">KingSong</a></li>
-                <li><a href="#"><img src="img/internal/menu-icon8.png" alt="">NineBot</a></li>
-                <li><a href="#"><img src="img/internal/menu-icon9.png" alt="">Rockwheel</a></li>
-                <li><a href="#"><img src="img/internal/menu-icon10.png" alt="">Solowheel</a></li>
-            </ul>
+        <ul class="internal__description-menu">
+        <li><a><img src="img/internal/menu-icon1.png" alt="">Производитель</a></li>
+        <li><a href="#" class="active"><img src="img/internal/menu-icon2.png" alt="">AirWheel</a></li>
+        <li><a href="#"><img src="img/internal/menu-icon3.png" alt="">Ecodrift</a></li>
+        <li><a href="#"><img src="img/internal/menu-icon4.png" alt="">GotWay</a></li>
+        <li><a href="#"><img src="img/internal/menu-icon5.png" alt="">Inmotion</a></li>
+        <li><a href="#"><img src="img/internal/menu-icon6.png" alt="">IPS</a></li>
+        <li><a href="#"><img src="img/internal/menu-icon7.png" alt="">KingSong</a></li>
+        <li><a href="#"><img src="img/internal/menu-icon8.png" alt="">NineBot</a></li>
+        <li><a href="#"><img src="img/internal/menu-icon9.png" alt="">Rockwheel</a></li>
+        <li><a href="#"><img src="img/internal/menu-icon10.png" alt="">Solowheel</a></li>
+    </ul>
 
-            <div class="internal__description__field">
-                <div class="tab tab1">
-                    <div class="text">
-                        <h2>МОНОКОЛЕСО AIRWHEEL </h2>
-                        <p>Приобретая моноколесо Airwheel X5, Вы сможете отправиться на прогулку в парк или же покататься вместе с друзьями. </p>
-                    </div>
-                    <div class="img">
-                        <img src="img/mono-wheel.png" alt="">
-                    </div>
+        <div class="internal__description-field">
+            <div class="tab">
+                <div class="text">
+                    <h2>МОНОКОЛЕСО AIRWHEEL </h2>
+                    <p>Приобретая моноколесо Airwheel X5, Вы сможете отправиться на прогулку в парк или же покататься вместе с друзьями. </p>
                 </div>
-                <!--<div class="tab2">-->
-                    <!--<div class="text">-->
-                        <!--<h2>МОНОКОЛЕСО AIRWHEEL </h2>-->
-                        <!--<p>Приобретая моноколесо Airwheel X5, Вы сможете отправиться на прогулку в парк или же покататься вместе с друзьями. </p>-->
-                    <!--</div>-->
-                    <!--<div class="img">-->
-                        <!--<img src="img/mono-wheel.png" alt="">-->
-                    <!--</div>-->
-                <!--</div>-->
-                <!--<div class="tab3">-->
-                    <!--<div class="text">-->
-                        <!--<h2>МОНОКОЛЕСО AIRWHEEL </h2>-->
-                        <!--<p>Приобретая моноколесо Airwheel X5, Вы сможете отправиться на прогулку в парк или же покататься вместе с друзьями. </p>-->
-                    <!--</div>-->
-                    <!--<div class="img">-->
-                        <!--<img src="img/mono-wheel.png" alt="">-->
-                    <!--</div>-->
-                <!--</div>-->
-                <!--<div class="tab4">-->
-                    <!--<div class="text">-->
-                        <!--<h2>МОНОКОЛЕСО AIRWHEEL </h2>-->
-                        <!--<p>Приобретая моноколесо Airwheel X5, Вы сможете отправиться на прогулку в парк или же покататься вместе с друзьями. </p>-->
-                    <!--</div>-->
-                    <!--<div class="img">-->
-                        <!--<img src="img/mono-wheel.png" alt="">-->
-                    <!--</div>-->
-                <!--</div>-->
-                <!--<div class="tab5">-->
-                    <!--<div class="text">-->
-                        <!--<h2>МОНОКОЛЕСО AIRWHEEL </h2>-->
-                        <!--<p>Приобретая моноколесо Airwheel X5, Вы сможете отправиться на прогулку в парк или же покататься вместе с друзьями. </p>-->
-                    <!--</div>-->
-                    <!--<div class="img">-->
-                        <!--<img src="img/mono-wheel.png" alt="">-->
-                    <!--</div>-->
-                <!--</div>-->
-                <!--<div class="tab6">-->
-                    <!--<div class="text">-->
-                        <!--<h2>МОНОКОЛЕСО AIRWHEEL </h2>-->
-                        <!--<p>Приобретая моноколесо Airwheel X5, Вы сможете отправиться на прогулку в парк или же покататься вместе с друзьями. </p>-->
-                    <!--</div>-->
-                    <!--<div class="img">-->
-                        <!--<img src="img/mono-wheel.png" alt="">-->
-                    <!--</div>-->
-                <!--</div>-->
-                <!--<div class="tab7">-->
-                    <!--<div class="text">-->
-                        <!--<h2>МОНОКОЛЕСО AIRWHEEL </h2>-->
-                        <!--<p>Приобретая моноколесо Airwheel X5, Вы сможете отправиться на прогулку в парк или же покататься вместе с друзьями. </p>-->
-                    <!--</div>-->
-                    <!--<div class="img">-->
-                        <!--<img src="img/mono-wheel.png" alt="">-->
-                    <!--</div>-->
-                <!--</div>-->
-                <!--<div class="tab8">-->
-                    <!--<div class="text">-->
-                        <!--<h2>МОНОКОЛЕСО AIRWHEEL </h2>-->
-                        <!--<p>Приобретая моноколесо Airwheel X5, Вы сможете отправиться на прогулку в парк или же покататься вместе с друзьями. </p>-->
-                    <!--</div>-->
-                    <!--<div class="img">-->
-                        <!--<img src="img/mono-wheel.png" alt="">-->
-                    <!--</div>-->
-                <!--</div>-->
-                <!--<div class="tab9">-->
-                    <!--<div class="text">-->
-                        <!--<h2>МОНОКОЛЕСО AIRWHEEL </h2>-->
-                        <!--<p>Приобретая моноколесо Airwheel X5, Вы сможете отправиться на прогулку в парк или же покататься вместе с друзьями. </p>-->
-                    <!--</div>-->
-                    <!--<div class="img">-->
-                        <!--<img src="img/mono-wheel.png" alt="">-->
-                    <!--</div>-->
-                <!--</div>-->
-
+                <div class="img">
+                    <img src="img/mono-wheel-shadow.png" alt="">
+                </div>
             </div>
         </div>
+
         <div class="internal__catalog">
-            <ul class="breadcrumbs">
-                <li><a href="#">Главная/ </a></li>
-                <li><a href="#">Моноколеса/ </a></li>
-                <li><a href="#">Airwheel</a></li>
-            </ul>
-            <h2>Гироскутеры Airwheel</h2>
+            <div class="head">
+                <ul class="breadcrumbs">
+                    <li><a href="#">Главная/ </a></li>
+                    <li><a href="#">Моноколеса/ </a></li>
+                    <li><a href="#">Airwheel</a></li>
+                </ul>
+                <h2>Гироскутеры Airwheel</h2>
+            </div>
             <div class="block for-middle-screen">
                 <img src="img/mono-wheel.png" alt="">
                 <h3>МОНОКОЛЕСО AIRWHEEL X5</h3>
@@ -285,6 +213,18 @@
                 </div>
                 <p class="new-price">12 500 руб.</p>
                 <a href="#" class="btn-orange">в корзину</a>
+            </div>
+            <div class="internal__catalog__pagination">
+                <div class="internal__catalog__pagination__link">
+                    <a href="#"><<</a>
+                    <a href="#"><</a>
+                    <a href="#" class="active">1</a>
+                    <a href="#">2</a>
+                    <a href="#">3</a>
+                    <a href="#">4</a>
+                    <a href="#">></a>
+                    <a href="#">>></a>
+                </div>
             </div>
         </div>
     </div>
