--- a/shipping-and-paymen.html
+++ b/shipping-and-paymen.html
@@ -262,24 +262,24 @@
 
 <!-- end header.html-->
 
-<!-- start home-head.html-->
-<section class="home-head">
+<!-- start shopping-and-paymen-head.html-->
+<section class="shopping-head">
     <div class="container">
-        <div class="home-head__wrap">
-            <div class="home-head__wrap__text">
+        <div class="shopping-head__wrap">
+            <div class="shopping-head__wrap__text">
                 <h1>МОНОКОЛЕСО AIRWHEEL X5</h1>
                 <p>Приобретая моноколесо Airwheel X5, Вы сможете отправиться на прогулку в парк или же покататься вместе
                     с друзьями. </p>
                 <h2 class="sale"><span>скидка 20%</span> до 5.12.2016</h2>
                 <a href="#" class="btn-orange">узнать подробнее</a>
             </div>
-            <div class="home-head__wrap__img">
-                <img src="img/home-page-boy.png" alt="">
+            <div class="shopping-head__wrap__img">
+                <img src="img/shipping-and-paymen/head-img-girl.png" alt="">
             </div>
         </div>
     </div>
 </section>
-<!-- end home-head.html-->
+<!-- end shopping-and-paymen-head.html-->
 
 <!-- start services.html-->
 <div class="home-stock">
@@ -381,18 +381,16 @@
                 electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
                 Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
                 Aldus PageMaker including versions of Lorem Ipsum.
-            </p>
-
-            <p>
+                <br />
+                <br />
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                 industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
                 scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
                 electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
                 Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
                 Aldus PageMaker including versions of Lorem Ipsum.
-            </p>
-
-            <p>
+                <br />
+                <br />
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                 industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
                 scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
@@ -401,6 +399,7 @@
                 Aldus PageMaker including versions of Lorem Ipsum.
             </p>
         </div>
+        <div class="btn"><a href="#" class="btn-for-middle">ЧИТАТЬ ДАЛЕЕ</a></div>
     </div>
 </section>
 <!-- end shipping-order.html-->
