--- a/app/html/pages/reviews.html
+++ b/app/html/pages/reviews.html
@@ -2,7 +2,7 @@
 
 <!-- @@include ../header.html -->
 
-<!-- @@include ../home-head.html -->
+<!-- @@include ../shopping-and-paymen-head.html -->
 
 <!-- @@include ../services.html -->
 
