--- a/contacts.html
+++ b/contacts.html
@@ -275,32 +275,35 @@
                 <button type="submit">отправить</button>
             </form>
         </div>
-        <div class="contacts__text">
-            <h4>Отдел продаж:</h4>
-            <div class="contacts__text__contact">
-                <span>+7 757 287 78 78</span>
-                <span>Skype: Dadoo.ru</span>
-                <span>Mail: info@dadoo.ru</span>
+        <div class="text">
+            <div class="contacts__text">
+                <h4>Отдел продаж:</h4>
+                <div class="contacts__text__contact">
+                    <span>+7 757 287 78 78</span>
+                    <span>Skype: Dadoo.ru</span>
+                    <span>Mail: info@dadoo.ru</span>
+                </div>
+            </div>
+            <div class="contacts__text">
+                <h3>Время работы:</h3>
+                <div class="contacts__text__contact">
+                    <span>Менеджеры на телефоне: с 9-00 до 22-00</span>
+                    <span>БЕЗ ВЫХОДНЫХ</span>
+                    <span>Прием заказов через сайт: круглосуточно<</span>
+                </div>
+            </div>
+            <div class="contacts__text">
+                <div class="contacts__text__contact">
+                    <span>ООО Даду </span>
+                    <span>ИНН 00000000000000</span>
+                    <span>ОГРНИП 000000000000</span>
+                    <span>ОГРНИП 000000000000</span>
+                    <span>Юридический адрес: Московская обл. г.Ваг Город ул.Ваша 40 кв. 0000</span>
+                    <span>Наш адрес: г.Москва, Ваша улица пер., 00 стр.0</span>
+                </div>
             </div>
         </div>
-        <div class="contacts__text">
-            <h3>Время работы:</h3>
-            <div class="contacts__text__contact">
-                <span>Менеджеры на телефоне: с 9-00 до 22-00</span>
-                <span>БЕЗ ВЫХОДНЫХ</span>
-                <span>Прием заказов через сайт: круглосуточно<</span>
-            </div>
-        </div>
-        <div class="contacts__text">
-            <div class="contacts__text__contact">
-                <span>ООО Даду </span>
-                <span>ИНН 00000000000000</span>
-                <span>ОГРНИП 000000000000</span>
-                <span>ОГРНИП 000000000000</span>
-                <span>Юридический адрес: Московская обл. г.Ваг Город ул.Ваша 40 кв. 0000</span>
-                <span>Наш адрес: г.Москва, Ваша улица пер., 00 стр.0</span>
-            </div>
-        </div>
+
         <div class="contacts__map">
             <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A944ce8bf797429b32f07b37d5aec1827a484043268ce87a196e7390cc5501dcb&amp;width=100%25&amp;height=400&amp;lang=ru_UA&amp;scroll=true"></script>
         </div>
