--- a/reviews.html
+++ b/reviews.html
@@ -262,24 +262,24 @@
 
 <!-- end header.html-->
 
-<!-- start home-head.html-->
-<section class="home-head">
+<!-- start shopping-and-paymen-head.html-->
+<section class="shopping-head">
     <div class="container">
-        <div class="home-head__wrap">
-            <div class="home-head__wrap__text">
+        <div class="shopping-head__wrap">
+            <div class="shopping-head__wrap__text">
                 <h1>МОНОКОЛЕСО AIRWHEEL X5</h1>
                 <p>Приобретая моноколесо Airwheel X5, Вы сможете отправиться на прогулку в парк или же покататься вместе
                     с друзьями. </p>
                 <h2 class="sale"><span>скидка 20%</span> до 5.12.2016</h2>
                 <a href="#" class="btn-orange">узнать подробнее</a>
             </div>
-            <div class="home-head__wrap__img">
-                <img src="img/home-page-boy.png" alt="">
+            <div class="shopping-head__wrap__img">
+                <img src="img/shipping-and-paymen/head-img-girl.png" alt="">
             </div>
         </div>
     </div>
 </section>
-<!-- end home-head.html-->
+<!-- end shopping-and-paymen-head.html-->
 
 <!-- start services.html-->
 <div class="home-stock">
