--- a/app/html/home-catalog.html
+++ b/app/html/home-catalog.html
@@ -2,24 +2,26 @@
     <div class="container">
         <div class="catalog__wrap">
             <div class="block">
-                <img src="img/mono-wheel.png" alt="">
-                <h3>МОНОКОЛЕСО AIRWHEEL X5</h3>
-                <div class="characteristics">
-                    <div class="characteristics__img">
-                        <img src="img/icons/speed.png" alt="">
-                        <p>16 км/ч</p>
+                <a class="card-product" href="card-of-product.html">
+                    <img src="img/mono-wheel.png" alt="">
+                    <h3>МОНОКОЛЕСО AIRWHEEL X5</h3>
+                    <div class="characteristics">
+                        <div class="characteristics__img">
+                            <img src="img/icons/speed.png" alt="">
+                            <p>16 км/ч</p>
+                        </div>
+                        <div class="characteristics__img">
+                            <img src="img/icons/distance.png" alt="">
+                            <p>25 км</p>
+                        </div>
+                        <div class="characteristics__img">
+                            <img src="img/icons/diameter.png" alt="">
+                            <p>14“”</p>
+                        </div>
                     </div>
-                    <div class="characteristics__img">
-                        <img src="img/icons/distance.png" alt="">
-                        <p>25 км</p>
-                    </div>
-                    <div class="characteristics__img">
-                        <img src="img/icons/diameter.png" alt="">
-                        <p>14“”</p>
-                    </div>
-                </div>
-                <p class="new-price">12 500 руб.</p>
-                <a href="#" class="btn-orange">в корзину</a>
+                    <p class="new-price">12 500 руб.</p>
+                    <a href="#" class="btn-orange">в корзину</a>
+                </a>
             </div>
             <div class="block">
                 <img src="img/mono-wheel.png" alt="">
