--- a/card-of-product.html
+++ b/card-of-product.html
@@ -262,24 +262,94 @@
 
 <!-- end header.html-->
 
-<!-- start shopping-and-paymen-head.html-->
-<section class="shopping-head">
+<!-- start card-of-product.html-->
+<div class="card-of-product">
     <div class="container">
-        <div class="shopping-head__wrap">
-            <div class="shopping-head__wrap__text">
-                <h1>МОНОКОЛЕСО AIRWHEEL X5</h1>
-                <p>Приобретая моноколесо Airwheel X5, Вы сможете отправиться на прогулку в парк или же покататься вместе
-                    с друзьями. </p>
-                <h2 class="sale"><span>скидка 20%</span> до 5.12.2016</h2>
-                <a href="#" class="btn-orange">узнать подробнее</a>
+        <ul class="card-of-product__menu">
+            <li><a><img src="img/internal/menu-icon1.png" alt="">Производитель</a></li>
+            <li><a href="#" class="active"><img src="img/internal/menu-icon2.png" alt="">AirWheel</a></li>
+            <li><a href="#"><img src="img/internal/menu-icon3.png" alt="">Ecodrift</a></li>
+            <li><a href="#"><img src="img/internal/menu-icon4.png" alt="">GotWay</a></li>
+            <li><a href="#"><img src="img/internal/menu-icon5.png" alt="">Inmotion</a></li>
+            <li><a href="#"><img src="img/internal/menu-icon6.png" alt="">IPS</a></li>
+            <li><a href="#"><img src="img/internal/menu-icon7.png" alt="">KingSong</a></li>
+            <li><a href="#"><img src="img/internal/menu-icon8.png" alt="">NineBot</a></li>
+            <li><a href="#"><img src="img/internal/menu-icon9.png" alt="">Rockwheel</a></li>
+            <li><a href="#"><img src="img/internal/menu-icon10.png" alt="">Solowheel</a></li>
+        </ul>
+        <ul class="breadcrumbs">
+            <li><a href="#">Главная/</a></li>
+            <li><a href="#">Моноколеса/</a></li>
+            <li><a href="#">Airwheel</a></li>
+        </ul>
+        <div class="card-of-product__description">
+            <div class="card-of-product__description__slider flexslider">
+                <ul class="slides">
+                    <li data-thumb="img/mono-wheel.png">
+                        <img src="img/mono-wheel.png" />
+                    </li>
+                    <li data-thumb="img/mono-wheel.png">
+                        <img src="img/mono-wheel.png" />
+                    </li>
+                    <li data-thumb="img/mono-wheel.png">
+                        <img src="img/mono-wheel.png" />
+                    </li>
+                </ul>
             </div>
-            <div class="shopping-head__wrap__img">
-                <img src="img/shipping-and-paymen/head-img-girl.png" alt="">
+            <div class="card-of-product__description__block">
+                <h2>Гироскутеры Airwheel</h2>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown.
+                </p>
+                <div class="characteristics">
+                    <div class="characteristics__img">
+                        <img src="img/icons/speed.png" alt="">
+                        <p>Скорость</p>
+                        <p>16 км/ч</p>
+                    </div>
+                    <div class="characteristics__img">
+                        <img src="img/icons/distance.png" alt="">
+                        <p>Расстояние</p>
+                        <p>25 км</p>
+                    </div>
+                    <div class="characteristics__img">
+                        <img src="img/icons/diameter.png" alt="">
+                        <p>Диаметр</p>
+                        <p>14“”</p>
+                    </div>
+                </div>
+                <p><span>5 шт в наличии</span></p>
+                <div class="horizontal-line"></div>
+                <h3>12 500 руб.</h3>
+                <div class="counter">
+                    <span class="minus">-</span>
+                    <span class="cipher"></span>
+                    <span class="plus">+</span>
+                </div>
+                <a href="#" class="btn-orange">в корзину</a>
+                <ul>
+                    <li>- Аккумулятор</li>
+                    <li>- Bluetooth</li>
+                    <li>- Приложение</li>
+                    <li>- Подсветка</li>
+                    <li>- Музыка</li>
+                </ul>
+                <div class="payment">
+                    <p>Способы оплаты:</p>
+                    <img src="img/icons/sberbank-blue.png" alt="">
+                    <img src="img/icons/visa-blue.png" alt="">
+                    <img src="img/icons/wm-blue.png" alt="">
+                    <img src="img/icons/yandex-money-blue.png" alt="">
+                </div>
+                <div class="delivery">
+                    <img src="img/icons/location.png" alt="">
+                    <p>Доставка по Москве бесплатно</p>
+                </div>
             </div>
         </div>
     </div>
-</section>
-<!-- end shopping-and-paymen-head.html-->
+</div>
+<!-- end card-of-product.html-->
 
 <!-- start services.html-->
 <div class="home-stock">
@@ -307,143 +377,13 @@
 </div>
 <!-- end services.html-->
 
-<!-- start reviews-about-us.html-->
-<section class="reviews-about">
-    <div class="container">
-        <div class="reviews-about__title">
-            <h1>отзывы о нас</h1>
-        </div>
-    </div>
+<!-- start characteristics.html-->
 
-    <div class="reviews-about__reviews">
-        <div class="container">
-            <div class="reviews-about__reviews__initials">
-                <div class="reviews-about__reviews__initials__photo">
-                    <img src="img/rewiews/photo.png" alt="">
-                </div>
-                <h4>Александр</h4>
-                <p>
-                   <span class="product"> Гироскутер Ninebot Mini White</span>
-                    <span class="date">18.05.2017</span>
-                </p>
-            </div>
-            <div class="reviews-about__reviews__text">
-                <span class="arrow-left">«</span>
-                <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                    and scrambled it to make a type specimen book.
-                </p>
-                <span class="arrow-right">»</span>
-            </div>
-        </div>
-    </div>
-    <div class="reviews-about__reviews">
-        <div class="container">
-            <div class="reviews-about__reviews__initials">
-                <div class="reviews-about__reviews__initials__photo">
-                    <img src="img/rewiews/photo.png" alt="">
-                </div>
-                <h4>Александр</h4>
-                <p>
-                    <span class="product"> Гироскутер Ninebot Mini White</span>
-                    <span class="date">18.05.2017</span>
-                </p>
-            </div>
-            <div class="reviews-about__reviews__text">
-                <span class="arrow-left">«</span>
-                <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                    and scrambled it to make a type specimen book.
-                </p>
-                <span class="arrow-right">»</span>
-            </div>
-        </div>
-    </div>
-    <div class="reviews-about__reviews">
-        <div class="container">
-            <div class="reviews-about__reviews__initials">
-                <div class="reviews-about__reviews__initials__photo">
-                    <img src="img/rewiews/photo.png" alt="">
-                </div>
-                <h4>Александр</h4>
-                <p>
-                    <span class="product"> Гироскутер Ninebot Mini White</span>
-                    <span class="date">18.05.2017</span>
-                </p>
-            </div>
-            <div class="reviews-about__reviews__text">
-                <span class="arrow-left">«</span>
-                <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                    and scrambled it to make a type specimen book.
-                </p>
-                <span class="arrow-right">»</span>
-            </div>
-        </div>
-    </div>
-    <div class="reviews-about__reviews">
-        <div class="container">
-            <div class="reviews-about__reviews__initials">
-                <div class="reviews-about__reviews__initials__photo">
-                    <img src="img/rewiews/photo.png" alt="">
-                </div>
-                <h4>Александр</h4>
-                <p>
-                    <span class="product"> Гироскутер Ninebot Mini White</span>
-                    <span class="date">18.05.2017</span>
-                </p>
-            </div>
-            <div class="reviews-about__reviews__text">
-                <span class="arrow-left">«</span>
-                <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                    and scrambled it to make a type specimen book.
-                </p>
-                <span class="arrow-right">»</span>
-            </div>
-        </div>
-    </div>
-    <div class="reviews-about__pagination">
-        <div class="container">
-         <div class="reviews-about__pagination__link">
-             <a href="#"><<</a>
-             <a href="#"><</a>
-             <a href="#" class="active">1</a>
-             <a href="#">2</a>
-             <a href="#">3</a>
-             <a href="#">4</a>
-             <a href="#">5</a>
-             <a href="#">></a>
-             <a href="#">>></a>
-         </div>
-      </div>
-    </div>
-</section>
-<!-- end reviews-about-us.html-->
+<!-- end characteristics.html-->
 
-<!-- start reviews-feedback.html-->
-<section class="reviews-feedback">
-    <div class="container">
-        <div class="reviews-feedback__form">
-            <h1>Оставить отзыв</h1>
-            <form action="#">
-                <input type="text" name="name" placeholder="Ваше имя:" required>
-                <input type="email" name="email" placeholder="Ваш e-mail (не публикуется):" required>
-                <input type="text" name="by-product" placeholder="Купленный товар:" required>
-                <textarea name="reviews" cols="30" rows="10" placeholder="Отзыв:" required></textarea>
-                <button type="submit">отправить</button>
-            </form>
-        </div>
-        <div class="reviews-feedback__img">
-            <img src="img/rewiews/photo2.png" alt="">
-        </div>
-    </div>
-</section>
-<!-- end reviews-feedback.html-->
+<!-- start description.html-->
+
+<!-- end description.html-->
 
 <!-- start home-how-buy.html-->
 <div class="how-buy">
@@ -475,6 +415,40 @@
     </div>
 </div>
 <!-- end home-how-buy.html-->
+
+<!-- start home-reviews.html-->
+<div class="reviews">
+    <div class="container">
+        <h2>отзывы</h2>
+        <div class="reviews__slider owl-carousel">
+            <div class="reviews__slider__slide">
+                <div class="reviews__slider__slide__img">
+                    <img src="img/face-man.png" alt=""></div>
+                <div class="reviews__slider__slide__text">
+                    <span><p>Гироскутер Ninebot Mini White1</p></span>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                </div>
+            </div>
+            <div class="reviews__slider__slide">
+                <div class="reviews__slider__slide__img">
+                    <img src="img/face-man.png" alt=""></div>
+                <div class="reviews__slider__slide__text">
+                    <span><p>Гироскутер Ninebot Mini White2</p></span>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                </div>
+            </div>
+            <div class="reviews__slider__slide">
+                <div class="reviews__slider__slide__img">
+                    <img src="img/face-man.png" alt=""></div>
+                <div class="reviews__slider__slide__text">
+                    <span><p>Гироскутер Ninebot Mini White3</p></span>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- end home-reviews.html-->
 
 <!-- start home-video.html-->
 <div class="video">
@@ -570,15 +544,3 @@
     <a href="#" class="btn-orange">оформить заказ</a>
 </div>
 <!-- end footer.html-->
-
-<!-- start html_close.html-->
-<script src='js/jquery-2.1.3.min.js' type="text/javascript"></script>
-<script src='js/jquery-ui.min.js' type="text/javascript"></script>
-<script src="js/owl.carousel.min.js" type="text/javascript"></script>
-<script src="js/script.min.js" type="text/javascript"></script>
-<script src="js/countdown.js" type="text/javascript"></script>
-<script src="js/jquery.flexslider-min.js" type="text/javascript"></script>
-
-</body>
-</html>
-<!-- end html_close.html-->
