--- a/contacts.html
+++ b/contacts.html
@@ -402,6 +402,7 @@
 <script src="js/owl.carousel.min.js" type="text/javascript"></script>
 <script src="js/script.min.js" type="text/javascript"></script>
 <script src="js/countdown.js" type="text/javascript"></script>
+<script src="js/jquery.flexslider-min.js" type="text/javascript"></script>
 
 </body>
 </html>
