--- a/app/html/pages/card-of-product.html
+++ b/app/html/pages/card-of-product.html
@@ -10,6 +10,8 @@
 
 <!-- @@include ../description.html -->
 
+<!-- @@include ../card-product-product.html -->
+
 <!-- @@include ../home-how-buy.html -->
 
 <!-- @@include ../home-reviews.html -->
@@ -17,3 +19,5 @@
 <!-- @@include ../home-video.html -->
 
 <!-- @@include ../footer.html -->
+
+<!-- @@include ../html_close.html -->
