--- a/card-of-product.html
+++ b/card-of-product.html
@@ -378,12 +378,186 @@
 <!-- end services.html-->
 
 <!-- start characteristics.html-->
-
+<div class="characteristics">
+    <div class="container">
+        <div class="characteristics__wrap">
+            <h2>ХАРАКТЕРИСТИКИ</h2>
+            <ul class="characteristics__wrap__left">
+                <li>
+                    <p>Макс. скорость</p>
+                    <p>16 км/ч</p>
+                </li>
+                <li>
+                    <p>Дальность хода</p>
+                    <p>15 км</p>
+                </li>
+                <li>
+                    <p>Кол-во колес</p>
+                    <p>Одно</p>
+                </li>
+                <li>
+                    <p>Вес</p>
+                    <p>9 кг</p>
+                </li>
+                <li>
+                    <p>Диаметр колёс</p>
+                    <p>14""</p>
+                </li>
+                <li>
+                    <p>Аккумулятор</p>
+                    <p>132 Wh</p>
+                </li>
+                <li>
+                    <p>Мощность двигателя</p>
+                    <p>320W</p>
+                </li>
+            </ul>
+            <ul class="characteristics__wrap__right">
+                <li>
+                    <p>Время зарядки</p>
+                    <p>1 час</p>
+                </li>
+                <li>
+                    <p>Макс. нагрузка</p>
+                    <p>120 кг</p>
+                </li>
+                <li>
+                    <p>Макс. угол подьема</p>
+                    <p>15 градусов</p>
+                </li>
+                <li>
+                    <p>Размеры</p>
+                    <p>450 х 395 x180 мм</p>
+                </li>
+                <li>
+                    <p>Подсветка</p>
+                    <p>Нет</p>
+                </li>
+                <li>
+                    <p>Подсветка</p>
+                    <p>Нет</p>
+                </li>
+                <li>
+                    <p>Приложение</p>
+                    <p>Нет</p>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
 <!-- end characteristics.html-->
 
 <!-- start description.html-->
-
+<div class="descriptions">
+    <div class="container">
+        <div class="descriptions__wrap">
+            <p>RUSWHEEL X1 - моноколесо, прекрасно подходящее для новичков и подростков. В комплект входит набор дополнительных колесиков, которые придадут ощущение устойчивости на первых порах. Подножки моноколеса представляют собой широкие удобные платформы для ступней с прорезиненными элементами, предотвращающими скольжение. </p>
+            <p>Корпус моноколеса выполнен в черном цвете. Красные панели по сторонам уницикла предназначены для комфорта и снятия усталости с ног во время движения. </p>
+            <p>Моноколесо движется со скоростью 16 километров в час. Такая скорость позволяет безопасно кататься по улицам города, подниматься на небольшие уклоны и спускаться с горок. Специальная защитная система не позволит моноколесу сильно разогнаться.
+            </p>
+            <p>Дальность хода моноколеса на одном заряде - 15 километров. Для подзарядки аккумулятора требуется всего 1 час.</p>
+            <p>Моноколесо компактное и легкое - весит всего 9 килограмм. Его легко можно переносить в рюкзаке или сумке, а также с помощью встроенной ручки.</p>
+        </div>
+    </div>
+</div>
 <!-- end description.html-->
+
+<!-- start card-product-product.html-->
+<div class="card-product-product">
+    <div class="container">
+        <div class="card-product-product__products">
+            <div class="block">
+                <a class="card-product" href="card-of-product.html">
+                    <img src="img/mono-wheel.png" alt="">
+                    <h3>МОНОКОЛЕСО AIRWHEEL X5</h3>
+                    <div class="characteristics">
+                        <div class="characteristics__img">
+                            <img src="img/icons/speed.png" alt="">
+                            <p>16 км/ч</p>
+                        </div>
+                        <div class="characteristics__img">
+                            <img src="img/icons/distance.png" alt="">
+                            <p>25 км</p>
+                        </div>
+                        <div class="characteristics__img">
+                            <img src="img/icons/diameter.png" alt="">
+                            <p>14“”</p>
+                        </div>
+                    </div>
+                    <p class="new-price">12 500 руб.</p>
+                    <a href="#" class="btn-orange">в корзину</a>
+                </a>
+            </div>
+            <div class="block">
+                <a class="card-product" href="card-of-product.html">
+                    <img src="img/mono-wheel.png" alt="">
+                    <h3>МОНОКОЛЕСО AIRWHEEL X5</h3>
+                    <div class="characteristics">
+                        <div class="characteristics__img">
+                            <img src="img/icons/speed.png" alt="">
+                            <p>16 км/ч</p>
+                        </div>
+                        <div class="characteristics__img">
+                            <img src="img/icons/distance.png" alt="">
+                            <p>25 км</p>
+                        </div>
+                        <div class="characteristics__img">
+                            <img src="img/icons/diameter.png" alt="">
+                            <p>14“”</p>
+                        </div>
+                    </div>
+                    <p class="new-price">12 500 руб.</p>
+                    <a href="#" class="btn-orange">в корзину</a>
+                </a>
+            </div>
+            <div class="block">
+                <a class="card-product" href="card-of-product.html">
+                    <img src="img/mono-wheel.png" alt="">
+                    <h3>МОНОКОЛЕСО AIRWHEEL X5</h3>
+                    <div class="characteristics">
+                        <div class="characteristics__img">
+                            <img src="img/icons/speed.png" alt="">
+                            <p>16 км/ч</p>
+                        </div>
+                        <div class="characteristics__img">
+                            <img src="img/icons/distance.png" alt="">
+                            <p>25 км</p>
+                        </div>
+                        <div class="characteristics__img">
+                            <img src="img/icons/diameter.png" alt="">
+                            <p>14“”</p>
+                        </div>
+                    </div>
+                    <p class="new-price">12 500 руб.</p>
+                    <a href="#" class="btn-orange">в корзину</a>
+                </a>
+            </div>
+            <div class="block">
+                <a class="card-product" href="card-of-product.html">
+                    <img src="img/mono-wheel.png" alt="">
+                    <h3>МОНОКОЛЕСО AIRWHEEL X5</h3>
+                    <div class="characteristics">
+                        <div class="characteristics__img">
+                            <img src="img/icons/speed.png" alt="">
+                            <p>16 км/ч</p>
+                        </div>
+                        <div class="characteristics__img">
+                            <img src="img/icons/distance.png" alt="">
+                            <p>25 км</p>
+                        </div>
+                        <div class="characteristics__img">
+                            <img src="img/icons/diameter.png" alt="">
+                            <p>14“”</p>
+                        </div>
+                    </div>
+                    <p class="new-price">12 500 руб.</p>
+                    <a href="#" class="btn-orange">в корзину</a>
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- end card-product-product.html-->
 
 <!-- start home-how-buy.html-->
 <div class="how-buy">
@@ -544,3 +718,16 @@
     <a href="#" class="btn-orange">оформить заказ</a>
 </div>
 <!-- end footer.html-->
+
+<!-- start html_close.html-->
+<script src='js/jquery-2.1.3.min.js' type="text/javascript"></script>
+<script src='js/jquery-ui.min.js' type="text/javascript"></script>
+<script src="js/owl.carousel.min.js" type="text/javascript"></script>
+<script src="js/countdown.js" type="text/javascript"></script>
+<script src="js/jquery.flexslider-min.js"type="text/javascript"></script>
+<script src="js/script.min.js" type="text/javascript"></script>
+
+
+</body>
+</html>
+<!-- end html_close.html-->
